# fables

./: .gitignore  Pipfile  README.md  plan.md  pyproject.toml  requirements.txt  setup.py  workplan.md
app/: config.py  fable_service.py  main.py  openai_client.py
app/core/: config.py  logging.py
app/prompts/: system.txt  user.txt  user_prompt.py
app/services/: fable_service.py  openai_client.py
app/types/: fable.py  health.py  openai_response.py
scripts/: health_check.py
tests/: test_api.py  test_fable.py  test_fable_service.py  test_main.py  test_openai_client.py  test_user_prompt.py
