[tool.poetry]
name = "fable-generator"
version = "1.0.0"
description = "A creative fable generator using OpenAI's GPT and DALL-E"
authors = ["Your Organization <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"
openai = "^1.76.0"
httpx = "^0.28.1"
jinja2 = "^3.1.6"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"